syntax = "proto3";

package onight.zjfae.afront.gens;
option java_outer_classname="UserHighNetWorthInfo";
//Generated By BrewRobot:Mon Sep 11 10:20:38 CST 2017

message PBIFE_bankcardmanage_getUserHighNetWorthInfo{
	///ife/userinfomanage/getUserHighNetWorthInfo.html

	string auditComment1 = 1; //,文件1合格投资者审核不通过原因,String,不校验,否,

	string auditComment2 = 2; //,文件2合格投资者审核不通过原因,String,不校验,否,

	string auditComment3 = 3; //,文件3合格投资者审核不通过原因,String,不校验,否,

	string auditComment4 = 4; //,文件4合格投资者审核不通过原因,String,不校验,否,

	string auditComment5 = 5; //,文件5合格投资者审核不通过原因,String,不校验,否,
	
	string auditComment6 = 6; //,文件6合格投资者审核不通过原因,String,不校验,否,
	
	string auditComment7 = 7; //,文件7合格投资者审核不通过原因,String,不校验,否,
	
	string auditComment8 = 8; //,文件8合格投资者审核不通过原因,String,不校验,否,
	
	string auditComment9 = 9; //,文件9合格投资者审核不通过原因,String,不校验,否,
	
	string auditComment10 = 10; //,文件10合格投资者审核不通过原因,String,不校验,否,

	string status = 11; //,审核状态,String,空表示审核通过,不校验,否,

	string remark = 12; //,备注 ,String ,不校验,否,
	
	string gmtCreate=13; //申请时间,Date,不校验,否,后台审核通过或者第一次申请
	
    string gmtAudit=14;	 //审核时间,Date,不校验,否,后台审核通过或者第一次申请
	
	repeated DictDynamic dictDynamicList = 15;  
	
	string materialsType1 = 16 ;//资产证明材料名1,String

    string materialsType2 = 17;//资产证明材料名2,String

    string materialsType3 = 18;//资产证明材料名3,String

    string materialsType4 = 19;//资产证明材料名4,String

    string materialsType5 = 20;//资产证明材料名5,String

    string materialsType6 = 21 ;//资产证明材料名6,String
    
    string materialsType7 = 22 ;//资产证明材料名7,String


}

message DictDynamic{
		repeated KeyAndValue keyValueList = 1;
		string dynamicType1 = 3;	 //,动态类型,String,不校验,是,
		string dynamicWeight = 4;	 //,权重,String,不校验,是,
		string model = 5;	 //,模型序列,String,不校验,是,
		string title = 6;	 //,标题,String,不校验,是,
		string remark = 7;	 //,备注,String,不校验,是,
		int32 upperLimit = 8;	 //,重复上限,int,不校验,是,
		string isSelect = 9 ; //是否下拉框,String,不校验,是,
		string required = 10;	 //,是否必填,String,不校验,是,
		string auditComment=11; //合格投资者审核不通过原因,String,不校验,否, 
	}

 message KeyAndValue{
  	   string dynamicKey = 1;	 //,参数键,String,不校验,是,
	   string dynamicValue = 2;	 //,参数名/值,String,不校验,是,
 }

	
message Ret_PBIFE_bankcardmanage_getUserHighNetWorthInfo{
	///ife/userinfomanage/getUserHighNetWorthInfo.html

	string returnCode=1;	//报文头

	string returnMsg=2;	//报文头
	

	PBIFE_bankcardmanage_getUserHighNetWorthInfo data=5;
    
    
    
}

message REQ_PBIFE_bankcardmanage_getUserHighNetWorthInfo{
	///ife/userinfomanage/getUserHighNetWorthInfo.html

   string dynamicType1 = 1;//,动态字典类型,String,不校验,否,
   string record =2;//,查询记录,string,不校验,否,
}